Links and about page to correct alignment and padding fixes

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ li > ul {
   margin-top:0;
 }
 
+.page-content {
+  padding: 15px 0;
+}
+
 /* Responsive embedded youtube */
 .embed-container {
   position: relative;
